--- a/cuda/gaussian/Makefile
+++ b/cuda/gaussian/Makefile
@@ -4,7 +4,7 @@ CC := $(CUDA_DIR)/bin/nvcc
 
 INCLUDE := $(CUDA_DIR)/include
 
-SRC = gaussianDouble.cu
+SRC = gaussianHalf.cu
 EXE = gaussian
 
 release: $(SRC)
